Ulam_Week_7/code/error.txt
 Compile UlamCustomElements.cpp: ERROR: Close failed: 512
stdout={make: Entering directory '/usr/lib/ulam/MFM'
Building MFM for Debian package name: ulam
g++ -shared -fPIC -DELEMENT_PLUG_IN -O99  -ansi -pedantic -Wall -Werror -D SHARED_DIR=\"/usr/lib/ulam/MFM\" -pthread -I /usr/bin/../lib/ulam/ULAM/bin/../../MFM/src/platform-linux/include  -I /usr/bin/../lib/ulam/ULAM/bin/../share/tcc/stdlib -I /usr/bin/../lib/ulam/ULAM/bin/../../MFM/src/sim/include -I /usr/bin/../lib/ulam/ULAM/bin/../../MFM/src/elements/include -I include -I /usr/bin/../lib/ulam/ULAM/bin/../../MFM/src/core/include -I /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include -Wno-unused-variable -Wno-error=unused-variable -Wno-error=unused-but-set-variable -DMFM_BUILD_DATE=0x20171001 -DMFM_BUILD_TIME=0x141602 -DMFM_BUILT_BY=ben -DMFM_BUILT_ON=ben-SVT13136CYS -DMFM_VERSION_MAJOR=4 -DMFM_VERSION_MINOR=0 -DMFM_VERSION_REV=5 -DMFM_TREE_VERSION="v4.0.5" -DDEBIAN_PACKAGE_NAME="ulam" -DMAGIC_DEBIAN_PACKAGE_VERSION="" -c -MMD -MP -MF"/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.d" -MT"/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.o" -MT"/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.d" -o"/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.o" "/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/UlamCustomElements.cpp"
config/Makeulamfile.mk:63: recipe for target '/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.o' failed
make: Leaving directory '/usr/lib/ulam/MFM'
}
stderr=In file included from /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Uq_102234Bond10.h:153:0,
                 from /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Ue_102234Cell10.tcc:5,
                 from /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Ue_102234Cell10.h:111,
                 from /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/UlamCustomElements.h:8,
                 from /home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/UlamCustomElements.cpp:2:
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Uq_102234Bond10.tcc: In instantiation of ‘void MFM::Uq_102234Bond10<EC>::Uf_4line(const MFM::UlamContext<EC>&, MFM::UlamRef<EC>&, MFM::Ui_Ut_102321i<EC>&, MFM::Ui_Ut_102321i<EC>&, MFM::Ui_Ut_102321i<EC>&, MFM::Ui_Ut_102321i<EC>&) const [with EC = MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u>]’:
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Uq_102234Bond10.tcc:1210:11:   required from ‘void MFM::Uq_102234Bond10<EC>::Uf_919drawBonds(const MFM::UlamContext<EC>&, MFM::UlamRef<EC>&) const [with EC = MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u>]’
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Ue_102234Cell10.tcc:31:5:   required from ‘static void MFM::Ue_102234Cell10<EC>::Uf_6behave(const MFM::UlamContext<EC>&, MFM::UlamRef<EC>&) [with EC = MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u>]’
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Ue_102234Cell10.tcc:164:62:   required from ‘void (* MFM::Ue_102234Cell10<MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u> >::m_vtable [2])()’
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Ue_102234Cell10.tcc:172:24:   required from ‘void (* MFM::Ue_102234Cell10<EC>::getVTableEntry(MFM::u32) const)() [with EC = MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u>; MFM::VfuncPtr = void (*)(); MFM::u32 = unsigned int]’
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/UlamCustomElements.cpp:57:1:   required from here
/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/src/../include/Uq_102234Bond10.tcc:1355:48: error: cannot convert ‘MFM::Ui_Ut_102321i<MFM::EventConfig<MFM::Site<MFM::P3AtomConfig>, 4u> >’ to ‘MFM::u32 {aka unsigned int}’ for argument ‘1’ to ‘MFM::u32 MFM::_BinOpDivideInt32(MFM::u32, MFM::u32, MFM::u32)’
     const u32 Uh_5tlreg3709 = _BinOpDivideInt32(Uh_5tlval3708, Uh_5tlreg3696, 32); //gcnl:NodeBinaryOp.cpp:805
                                                ^
make: *** [/home/ben/Documents/Ulam_Development/Ulam_Week_7/code/.gen/build/UlamCustomElements.o] Error 1

